css/style.css
/* ... */
@keyframes rotating {
    0% {
        -webkit-transform: translate(-7px, -7px) rotate(0deg);
        transform: translate(-7px, -7px) rotate(0deg);
    }
    95% {
        -webkit-transform: translate(-7px, -7px) rotate(350deg);
        transform: translate(-7px, -7px) rotate(350deg);
    }
    100% {
        -webkit-transform: translate(-7px, -7px) rotate(360deg);
        transform: translate(-7px, -7px) rotate(360deg);
    }
}

.header-appear.cursor-light:hover~#animated-cursor {
    display: none;
}

.header-appear .animated-wrap,
.header-appear .animated-element {
    transform: none !important;
}


/* ===================================
   About
====================================== */

.main-title {
    position: relative;
    margin-bottom: 6rem;
    text-align: center;
}

.main-title h5 {
    font-family: "Source Sans Pro", sans-serif;
    font-weight: 400;
    margin-bottom: 1.1rem;
    color: #212622;
}

.main-title h2 {
    font-weight: 300;
    color: #212622;
    line-height: 1.2;
    max-width: 650px;
    margin-bottom: 1.5rem;
    margin-left: auto;
    margin-right: auto;
}

.main-title p {
    max-width: 720px;
    margin: 0 auto;
}

.main-title.style-two h5 {
    margin-bottom: 1.5rem;
}

.main-title.style-two h2 {
    text-transform: initial;
    font-size: 37px;
    font-weight: 500;
    max-width: 720px;
}

.main-title.style-two p {
    color: #212622;
    max-width: 720px;
}

.rare-box {
    height: 187px;
    width: 100%;
    background: #e57bff;
    position: relative;
}

.about-img-small {
    margin-left: 30px;
    top: -155px;
    margin-bottom: -153px;
}

.about ul li {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 16px;
    display: flex;
}

.about ul li:before {
    font-family: "Font Awesome 5 Free";
    padding-right: 15px;
    font-weight: 700;
    content: '\f061';
    color: #aac0e4;
}

@keyframes scale {
    from {
        transform: translateY(0);
    }
    to {
        transform: translateY(-10px)
    }
}

.about:before {
    content: url(/img/about-circle.png);
    position: absolute;
    right: -10px;
    top: 200px;
    animation: scale .6s alternate infinite linear both;
}


/* about 3 boxes */

.about-box {
    transition: .5s linear;
    text-align: center;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    padding: 40px;
    max-width: 350px;
}

.about-box i {
    font-size: 30px;
    position: relative;
}

.about-box:hover {
    transform: translate(0, -13px);
    transition: .5s linear;
}


/* ===================================
    Team
====================================== */

div.tab-frame input{ display:none;}
div.tab-frame label{ display:block; float:left;padding:5px 5px; cursor:pointer;font-family: 'Montserrat', sans-serif ;font-weight: 500;}
div.tab-frame input:checked + label{  color:#e57bff; cursor:default}
div.tab-frame div.tab{ display:none; padding:5px 10px;clear:left}

div.tab-frame input:nth-of-type(1):checked ~ .tab:nth-of-type(1),
div.tab-frame input:nth-of-type(2):checked ~ .tab:nth-of-type(2),
div.tab-frame input:nth-of-type(3):checked ~ .tab:nth-of-type(3){ display:block;}

.mar{
    margin-left: 25vw !important;
}

.w3-animate-opacity{animation:opac 1.5s}@keyframes opac{from{opacity:0} to{opacity:1}}

@media screen and (max-width: 480px) {
    .mar {
        margin-left: 12vw !important;
        
    }

    label{
        font-size: 4vw;
        
    }
    .mar2{
        margin-left: 26vw;
    }
}

.diamond{
    font-size: 10px;
    color: yellow;
}

.team:before {
    content: url(/img/team-circle.png);
    position: absolute;
    left: -10px;
    top: 200px;
    animation: scale .6s alternate infinite linear both;
}


/*
.team-image, .team-image2{
    background-color: #f1c30f;
    max-width: 285px;
    max-height: 285px;
}
*/

.team-image img,
.team-image2 img {
    width: 100%;
    height: auto;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -ms-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.m-image1,
.m-image2,
.m-image3,
.m-image4 {
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -ms-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}


/*
.m-image1 {
    margin: 21px 0 0 21px;
}
.m-image2 {
    margin:0 21px 21px 0;
}
.m-image3 {
    margin:21px 21px 0 0;
}
*/

.team-social {
    margin-bottom: 5px;
  
}

.team-social li {
    list-style: none;
    display: inline-block;
}

.team-social>li>a {
    height: 35px;
    width: 35px;
    border: 1px solid transparent;
    border-radius: 30px;
    display: block;
    line-height: 35px;
    color: #212622;
}

.team-classic-content {
    padding: 49px 20px;
    
    -webkit-box-shadow: 0 10px 5px -10px #b7b7b7;
    box-shadow: 0 10px 5px -10px #b7b7b7;
    text-align: center;
    
}

.ayush{
    background-image: url("/img/ayushbansal@2x\ _2.png");

    
}

.sriesh{
    background-image: url("/img/srieshagrawal@2x.png");
}

.saransh{
    background-image: url("/img/saranshbhachawat@2x.png");
    
}
.sankar{
    background-image: url("/img/sankarkvs@2x.png");
}

.ritik{
    background-image: url("/img/ritikkumar@2x.png");
}

.aayush{
    background-image: url("/img/aayushchodvadiya@2x.png");
}

.akash{
    background-image: url("/img/akashshukla.png");
}

.shivam{
    background-image: url("/img/shivamchokhani.png");
}

.eashwar{
    background-image: url("/img/eashwarshriram@2x.png");
}
.sanskriti{
    background-image: url("/img/sanskritinegi@2x.png");
}

.dhruv{
    background-image: url("/img/dhruvvaidh@2x.png");
}

.sejal{
    background-image: url("/img/sejalbharthi@2x.png");
}
.muskan{
    background-image: url("/img/muskanagarwal.png");
}

.dishit{
    background-image: url("/img/dishitduggar@2x.png");
}

.akashg{
    background-image: url("/img/akashgupta.png");
}
.prajjwal{
    background-image: url("/img/prajjwalgupta@2x.png");
}
/* ... */

